[package]
name = "bevy-wormhole"
version = "0.1.0"
authors = ["tRuTrIx <trutrix@monocyte.host>", "StealthOfKing <sok@monocyte.host>"]
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["wayland"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
